--- a/dice/package.json
+++ b/dice/package.json
@@ -11,6 +11,7 @@
     "react-router-dom": "^6.22.0",
     "react-routing": "^0.0.7",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.8",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
